Promene oko dugmeta submit
Promene submit u reset i smanjenje kursora

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="David's personal portfolio Web Site">
+    <meta name="description" content="David's personal portfolio Website">
     <meta name="keywords" content="Portfolio, cv, info, web, webdesign, programming languages">
     <meta name="author" content="David Stević">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -213,7 +213,7 @@
             <input type="email" name="mail" id="mail" placeholder="Email adress" />
             <input type="text" name="subject" id="subject" placeholder="Subject" />
             <textarea id="message" name="message" rows="4" maxlength="1000">Message</textarea>
-            <input type="submit" value="Submit message">
+            <input type="reset" value="Submit message">
           </form>
           <div id="social">
             <a href="https://www.facebook.com/" target="_blank">
