--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="first" class="container">
       <div id="main-text">
         <h1>Hi, I'm David Stević!</h1>
-        <h2>Junior Web Developer</h2>
+        <h2>Junior Full-Stack Developer</h2>
       </div>
       <div id="box-for-arrow">
         <hr />
